--- a/signup.html
+++ b/signup.html
@@ -1,61 +1,81 @@
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<style type="text/css">
-	#mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
-	#mergeRow-gdpr {margin-top: 20px;}
-	#mergeRow-gdpr fieldset label {font-weight: normal;}
-	#mc-embedded-subscribe-form .mc_fieldset{border:none;min-height: 0px;padding-bottom:0px;}
-</style>
-<div id="mc_embed_signup">
-<form action="https://fyi.us14.list-manage.com/subscribe/post?u=523e97fad789c8129168aaaeb&amp;id=8695255610" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to our mailing list</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-	<label for="mce-FNAME">First Name </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-</div>
-<div class="mc-field-group">
-	<label for="mce-LNAME">Last Name </label>
-	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-</div>
-<div class="mc-field-group input-group">
-    <strong>Email Format </strong>
-    <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
-<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
-</ul>
-</div>
-<div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
-    <div class="content__gdpr">
-        <label>Marketing Permissions</label>
-        <p>Please select all the ways you would like to hear from the Lost Treasures Found team:</p>
-        <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-		<label class="checkbox subfield" for="gdpr_15587"><input type="checkbox" id="gdpr_15587" name="gdpr[15587]" value="Y" class="av-checkbox gdpr"><span>Email</span> </label><label class="checkbox subfield" for="gdpr_15595"><input type="checkbox" id="gdpr_15595" name="gdpr[15595]" value="Y" class="av-checkbox gdpr"><span>Direct Mail</span> </label><label class="checkbox subfield" for="gdpr_15599"><input type="checkbox" id="gdpr_15599" name="gdpr[15599]" value="Y" class="av-checkbox gdpr"><span>Customized Online Advertising</span> </label>
-        </fieldset>
-        <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
-    </div>
-    <div class="content__gdprLegal">
-        <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
-    </div>
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_523e97fad789c8129168aaaeb_8695255610" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
+<!doctype html>
+<html>
+  <head>
 
-<!--End mc_embed_signup-->
+    <meta charset="utf-8">
+
+    <!-- Primary Meta Tags -->
+    <title>Lost Treasures Found: Newsletter Signup</title>
+
+    <!-- iOS specific catches -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+
+    <link rel="stylesheet" href="https://use.typekit.net/uhv1skr.css">
+    <link type="text/css" rel="stylesheet" href="./styles/main.css">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <link type="text/css" rel="stylesheet" href="./styles/signup.css">
+
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
+
+  </head>
+  <body>
+
+    <!-- Begin Mailchimp Signup Form -->
+    <div id="mc_embed_signup">
+    <form action="https://fyi.us14.list-manage.com/subscribe/post?u=523e97fad789c8129168aaaeb&amp;id=8695255610" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+      <h2>
+        Be the first to know about<br />Lost Treasures Found News
+      </h2>
+    <div class="indicates-required"><span class="asterisk">&lowast;</span> indicates required</div>
+    <div class="mc-field-group">
+      <label for="mce-EMAIL">Email Address  <span class="asterisk">&lowast;</span>
+    </label>
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    </div>
+    <div class="mc-field-group">
+      <label for="mce-FNAME">First Name </label>
+      <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+    </div>
+    <div class="mc-field-group">
+      <label for="mce-LNAME">Last Name </label>
+      <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+    </div>
+    <div class="mc-field-group input-group">
+        <strong>Email Format </strong>
+        <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
+    <li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
+    </ul>
+    </div>
+    <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
+        <div class="content__gdpr">
+            <label><strong>Marketing Permissions</strong></label>
+            <p>
+              Please select all the ways you would like to hear from the Lost Treasures Found team:
+            </p>
+            <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+              <label class="checkbox subfield" for="gdpr_15587"><input type="checkbox" id="gdpr_15587" name="gdpr[15587]" value="Y" class="av-checkbox gdpr"><span>Email</span> </label><label class="checkbox subfield" for="gdpr_15595"><input type="checkbox" id="gdpr_15595" name="gdpr[15595]" value="Y" class="av-checkbox gdpr"><span>Direct Mail</span> </label><label class="checkbox subfield" for="gdpr_15599"><input type="checkbox" id="gdpr_15599" name="gdpr[15599]" value="Y" class="av-checkbox gdpr"><span>Customized Online Advertising</span> </label>
+              </fieldset>
+            <p>
+              You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.
+            </p>
+        </div>
+        <div class="content__gdprLegal">
+            <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
+        </div>
+    </div>
+      <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_523e97fad789c8129168aaaeb_8695255610" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+    </form>
+    </div>
+
+    <!--End mc_embed_signup-->
+  </body>
+</html>
