--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
 
     <!-- Begin Mailchimp Signup Form -->
     <div id="mc_embed_signup">
-    <form action="https://fyi.us14.list-manage.com/subscribe/post?u=523e97fad789c8129168aaaeb&amp;id=8695255610" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <form action="https://fyi.us14.list-manage.com/subscribe/post?u=523e97fad789c8129168aaaeb&amp;id=8695255610" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
         <div id="mc_embed_signup_scroll">
       <h2>
         Be the first to know about<br />Lost Treasures Found News
