Effectively Finished for Awards Season

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
       <div class="visual">
         <p>
-          Currently looking for a publisher. For more information please get in touch through email: <a href="mailto:inquiries@jono.fyi">inquiries@jono.fyi</a>
+          He is currently looking for a publisher to help distribute an accessible edition of the book. For more information please get in touch through email: <a href="mailto:inquiries@jono.fyi">inquiries@jono.fyi</a>
         </p>
       </div>
 
