Added Filippo in Credits

--- a/index.html
+++ b/index.html
@@ -138,18 +138,29 @@
       </div>
 
       <div id="creator">
+
         <h3>
           About the Creator
         </h3>
+
         <div class="centered">
           <img src="./images/portrait.jpg" width="49%" height="*" />
           <p class="caption">
             <a href="https://jforjane.com" target="_blank">Dulay, Jane</a>. Looking Ahead, 2018.
           </p>
         </div>
+
         <p>
           <a href="https://jono.fyi/" target="_blank">Jono</a> is an Emmy award winning graphic designer and computer programmer. He is currently earning a Master of Fine Arts in New Media at <a href="https://paris.edu/" target="_blank">Paris College of Art</a>. He is interested in combining art and technology to explore culture. His work has been showcased at the Tate Modern, Siggraph, FITC, and the Japan Media Arts Festival as well as featured in publications like The New Yorker and Wired Magazine.
         </p>
+
+        <h3 id="advisor">
+          Advisor and Introduction
+        </h3>
+        <p>
+          Filippo Lorenzin is a London based independent writer and curator. He collaborated with international art venues, including the Goethe Instiut, Satchi Gallery and La Biennale di Venezia. He currently teaches at the Paris College of Art and works at the Victoria and Albert Museum.
+        </p>
+
       </div>
 
       <div class="visual">
