--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </p>
 
       <p class="caption">
-        Sample the transcode process for yourself by clicking <a name="Emoji Transcoder" title="Emoji Transcoder" href="javascript:(function(){var a=document.createElement('script');a.onload=function(){Transcode.ready(function(){var a=document.querySelectorAll('p:not(.unavailable)');Transcode(a)})},a.src='//lost-and-found.gifts/src/transcode.js',document.body.appendChild(a)})();">here</a>.
+        Sample the transcode process for yourself by clicking here: <a name="Emoji Transcoder" title="Emoji Transcoder" href="javascript:(function(){var a=document.createElement('script');a.onload=function(){Transcode.ready(function(){var a=document.querySelectorAll('p:not(.unavailable)');Transcode(a)})},a.src='//lost-and-found.gifts/src/transcode.js',document.body.appendChild(a)})();">Transcode</a>.
       </p>
 
       <div id="walkthrough" class="visual">
