--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
           &copy; 2019
         </li>
       </ul>
+      <p class="caption">
+        No cookies. No problems.
+      </p>
     </div>
 
     <div id="preorder-cta">
