--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div id="details">
         <ul class="details centered">
           <li>
-            Laser engraved leather cover
+            Laser Engraved Leather Cover
           </li>
           <li>
             Printed November, 2018
@@ -111,13 +111,13 @@
             Paris, France
           </li>
           <li>
-            166 pages
+            166 Pages
           </li>
           <li>
-            Canson paper
+            Canson Paper
           </li>
           <li>
-            Acid free
+            Acid Free
           </li>
           <li>
              200gm
