Fixed Image Sizes on MS Edge

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="description">
 
       <div id="hero" class="visual">
-        <img src="./images/2-cover.jpg" width="100%" height="*" />
+        <img src="./images/2-cover.jpg" width="100%" />
         <p class="caption">
           Laser Engraved Cover, 2018.
         </p>
@@ -62,7 +62,7 @@
       </p>
 
       <div id="walkthrough" class="visual">
-        <video width="100%" height="*" muted="true" inline="true" autoplay="true" loop="true">
+        <video width="100%" muted="true" inline="true" autoplay="true" loop="true">
           <source src="//storage.googleapis.com/archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.mp4" type="video/mp4" />
           <source src="//storage.googleapis.com/archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.webm" type="video/webm" />
         </video>
@@ -89,14 +89,14 @@
       </div>
 
       <div id="slideshow" class="visual slideshow">
-        <img src="./images/1-texture.jpg" width="49%" height="*" />
-        <img src="./images/3-cover-profile.jpg" width="49%" height="*" />
-        <img src="./images/4-spine.jpg" width="49%" height="*" />
-        <img src="./images/5-frontpage.jpg" width="49%" height="*" />
-        <img src="./images/6-body.jpg" width="49%" height="*" />
-        <img src="./images/7-body.jpg" width="49%" height="*" />
-        <img src="./images/8-body-closeup.jpg" width="49%" height="*" />
-        <img src="./images/9-body-reverse.jpg" width="49%" height="*" />
+        <img src="./images/1-texture.jpg" width="49%" />
+        <img src="./images/3-cover-profile.jpg" width="49%" />
+        <img src="./images/4-spine.jpg" width="49%" />
+        <img src="./images/5-frontpage.jpg" width="49%" />
+        <img src="./images/6-body.jpg" width="49%" />
+        <img src="./images/7-body.jpg" width="49%" />
+        <img src="./images/8-body-closeup.jpg" width="49%" />
+        <img src="./images/9-body-reverse.jpg" width="49%" />
       </div>
 
       <div id="details">
@@ -150,7 +150,7 @@
         </h3>
 
         <div class="centered">
-          <img src="./images/portrait.jpg" width="49%" height="*" />
+          <img src="./images/portrait.jpg" width="49%" />
           <p class="caption">
             <a href="https://jforjane.com" target="_blank">Dulay, Jane</a>. Looking Ahead, 2018.
           </p>
