--- a/visualization.html
+++ b/visualization.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://use.typekit.net/uhv1skr.css">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=650, height=360, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
   </head>
   <body style="background: white;">
