--- a/book.html
+++ b/book.html
@@ -25,6 +25,7 @@
         font-weight: 400;
         font-style: normal;
         max-width: 710px;
+        margin: 0 auto;
       }
       h1, div.chapter {
         margin-top: 40px;
