--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       <div id="walkthrough" class="visual">
         <video width="100%" muted="true" inline="true" autoplay="true" loop="true">
-          <source src="//storage.googleapis.com/archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.mp4" type="video/mp4" />
-          <source src="//storage.googleapis.com/archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.webm" type="video/webm" />
+          <source src="//archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.mp4" type="video/mp4" />
+          <source src="//archive.jono.fyi/projects/lost-treasures-found/lost-treasures-found-walkthrough-1080.webm" type="video/webm" />
         </video>
         <p class="caption">
           Book Walkthrough, 2019.
